--- a/category-page.html
+++ b/category-page.html
@@ -61,7 +61,7 @@
               </div>
           </div>
           <div class="mt-4 py-1 text-center w-50 mx-auto rounded" style="background: #09174B;">   
-            <a href="./category-sorting-page.html" class="text-decoration-none text-light feeds-btn-bg">
+            <a href="./allticket.html" class="text-decoration-none text-light feeds-btn-bg">
               <button type="button" class=" btn form-control text-white py-1 rounded" >Continue with email</button>
             </a>  
           </div>
