--- a/feeds.html
+++ b/feeds.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>feeds</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/feed.css" />
@@ -138,7 +138,9 @@
           <img src="./feeds-image/envelope.png" alt="Logo" class="ms-4" />
           <span
             class="fw-bold text-secondary ps-2 fs-4 sidebar-text sidebar-hidden"
-            ><a class="text-decoration-none text-dark" href="./index.html">Chartpoll</a></span
+            ><a class="text-decoration-none text-dark" href="./index.html"
+              >Chartpoll</a
+            ></span
           >
           <span id="sidebar-button1" class="ms-4 sidebar-show"
             ><img src="./feeds-image/Vector (9).png" alt="open"
@@ -251,22 +253,24 @@
           />
         </form>
         <div class="">
-          <a href="./notificationsPage.html"><span
-            ><img
-              src="./image/Vector.png"
-              alt="notification"
-              width="25px" /><img
-              src="./image/Group 23.png"
-              alt=""
-              class="notify-num"
-          /></span></a>
+          <a href="./notificationsPage.html"
+            ><span
+              ><img
+                src="./image/Vector.png"
+                alt="notification"
+                width="25px" /><img
+                src="./image/Group 23.png"
+                alt=""
+                class="notify-num" /></span
+          ></a>
           <span
-            ><a href="./profile.html"><img
-              src="./image/Mask Group (1).png"
-              alt="profile picture"
-              width="30px"
-              class="ms-3"
-          /></a></span>
+            ><a href="./profile.html"
+              ><img
+                src="./image/Mask Group (1).png"
+                alt="profile picture"
+                width="30px"
+                class="ms-3" /></a
+          ></span>
           <div class="dropdown d-inline-block">
             <span
               class="dropdown-toggle fw-bold"
@@ -324,6 +328,7 @@
                 d-none d-lg-block
                 p-2
                 shape-radius
+                poll
               "
             >
               Create Poll
@@ -338,6 +343,7 @@
                 d-none d-md-block d-lg-none
                 p-2
                 shape-radius
+                poll
               "
             >
               Create Poll
@@ -352,6 +358,7 @@
                 d-md-none
                 p-2
                 shape-radius
+                poll
               "
             >
               Create Poll
