--- a/admin.html
+++ b/admin.html
@@ -40,14 +40,14 @@
         >
           <h3 class="admin-color text-center pb-3">Welcome</h3>
           <input
-            class="text-center rounded py-2 mb-2 w-50"
+            class="text-center rounded py-2 mb-2 w-50 admin-width"
             type="text"
             placeholder=" Enter Your Email Address"
             name=""
             id=""
           />
           <input
-            class="text-center rounded py-2 mt-3 mb-2 w-50"
+            class="text-center rounded py-2 mt-3 mb-2 w-50 admin-width"
             placeholder="Enter Your Password"
             type="password"
             name=""
@@ -55,7 +55,7 @@
           />
           <button
             style="background-color: #0e0e53"
-            class="mt-3 btn rounded-pill text-white w-50"
+            class="mt-3 btn rounded-pill text-white w-50 admin-width"
           >
             <a class="text-decoration-none text-white" href="./dashboard.html"
               >Continue with Email</a
