--- a/allticket.html
+++ b/allticket.html
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="my-5 py-1 text-center w-50 mx-auto rounded" style="background: #09174B;">   
-                        <a href="./feeds.html" class="text-decoration-none text-light feeds-btn-bg">
+                        <a href="./category-sorting-page.html" class="text-decoration-none text-light feeds-btn-bg">
                           <button type="button" class=" btn form-control text-white fs-5 py-1 rounded" >Proceed</button>
                         </a>  
                       </div>
