--- a/notificationsPage.html
+++ b/notificationsPage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/notification.css">
+    <link rel="stylesheet" href="css/feed.css">
 </head>
 <body>
     <!-- SIDEBAR MOBILE -->
@@ -25,10 +26,10 @@
             <div class="collapse navbar-collapse justify-content-end align-center" id="navbarNav">
                 <ul class="navbar-nav text-white ms-2">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="./images/Vector (7).png" width="15px" alt="New Poll"><span class="text-secondary ps-4 pt-5">New Poll</span></a>
+                        <a class="nav-link poll"><img src="./images/Vector (7).png" width="15px" alt="New Poll"><span class="text-secondary ps-4 pt-5">New Poll</span></a>
                         </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><img src="./images/Group 20.png" width="15px" alt="All Feeds"> <span class="text-secondary ps-4 pt-5">All Feeds</span> </a>
+                        <a class="nav-link" href="./feeds.html"><img src="./images/Group 20.png" width="15px" alt="All Feeds"> <span class="text-secondary ps-4 pt-5">All Feeds</span> </a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="#"><img src="./images/Vector (5).png" width="15px" alt="Technology"><span class="text-secondary ps-4 pt-5">Technology</span></a>
@@ -43,7 +44,7 @@
                     <a class="nav-link" href="#"><img src="./images/Group 18.png" width="15px" alt="Business"><span class="text-secondary ps-4 pt-5">Business</span></a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#"><img src="./images/Vector (4).png" width="15px" alt="Profile"><span class="text-secondary ps-4 pt-5">Profile</span></a>
+                    <a class="nav-link" href="./profile.html"><img src="./images/Vector (4).png" width="15px" alt="Profile"><span class="text-secondary ps-4 pt-5">Profile</span></a>
                     </li>
 
                 </ul>
@@ -61,10 +62,10 @@
             </span>
             <ul class="nav flex-column mb-auto ps-3 pt-5 mt-3">
                 <li class="nav-item mb-3">
-                    <a href="#" class="nav-link active" aria-current="page"> <img src="./images/Vector (7).png" alt="New Poll"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">New Poll</span></a>
+                    <a class="nav-link active poll" aria-current="page"> <img src="./images/Vector (7).png" alt="New Poll"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">New Poll</span></a>
                 </li>
                 <li class="mb-3">
-                    <a href="#" class="nav-link active" aria-current="page"><img src="./images/Group 20.png" alt="All Feeds"> <span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">All Feeds</span> </a>
+                    <a href="./feeds.html" class="nav-link active" aria-current="page"><img src="./images/Group 20.png" alt="All Feeds"> <span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">All Feeds</span> </a>
                 </li>
                 <li class="mb-3">
                     <a href="#" class="nav-link active" aria-current="page"><img src="./images/Vector (5).png" alt="Technology"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">Technology</span></a>
@@ -79,7 +80,7 @@
                     <a href="#" class="nav-link active" aria-current="page"><img src="./images/Group 18.png" alt="Business"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">Business</span></a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link active" aria-current="page"><img src="./images/Vector (4).png" alt="Profile"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">Profile</span></a>
+                    <a href="./profile.html" class="nav-link active" aria-current="page"><img src="./images/Vector (4).png" alt="Profile"><span class="text-secondary ps-4 pt-5 sidebar-text sidebar-hidden">Profile</span></a>
                 </li>
             </ul>
         </div>
@@ -151,7 +152,238 @@
             </div>
         </div>
     </main>
-
+    <section
+      id="new-poll-section"
+      class="poll-modal modal-display position-fixed top-0 start-0 w-100 h-100"
+    >
+      <!-- modal body container -->
+      <div
+        style="max-height: 25em"
+        class="
+          overflow-auto
+          position-relative
+          col-12 col-md-8 col-lg-6
+          top-50
+          start-50
+          translate-middle
+          bg-white
+          rounded
+          py-2
+        "
+      >
+        <!-- modal header -->
+        <div>
+          <button
+            data-btn="closemodal"
+            class="me-2 rounded-circle btn poll-bg float-end"
+          >
+            <img style="height: 0.7em" src="./image/clear_24px.png" alt="" />
+          </button>
+          <p class="text-center fs-2">Create a new Poll</p>
+        </div>
+        <!-- modal sub body -->
+        <div class="row">
+          <div class="col-10 offset-1">
+            <!-- modal sub-header -->
+            <div
+              class="
+                row
+                d-flex
+                align-items-center
+                justify-content-between
+                flex-column flex-sm-row
+              "
+            >
+              <div class="col-sm-6 d-flex align-items-center mb-2 mb-sm-0">
+                <img
+                  style="height: 3em"
+                  src="./image/Mask Group (1).png"
+                  class="img-fluid"
+                  alt="user-img"
+                />
+                <p class="m-0 ps-2">Person Picken</p>
+              </div>
+              <div class="col-sm-6 text-sm-end text-center p-0">
+                <button
+                  data-btn="category"
+                  class="btn modal-btn btn-outline-dark w-100 rounded"
+                >
+                  Select Catergory
+                </button>
+              </div>
+            </div>
+            <!-- modal- input -->
+            <div class="row mt-2">
+              <textarea
+                id="input"
+                class="rounded poll-bg"
+                placeholder="Type in your questions here..."
+                cols="30"
+                rows="3"
+              ></textarea>
+            </div>
+            <!-- modal dynamic parts -->
+            <div class="row dynamic">
+              <!-- User Selects An Option -->
+              <div
+                id="select-box"
+                class="
+                  bg-light
+                  d-flex
+                  align-items-center
+                  justify-content-around
+                  poll-bg
+                  mt-2
+                  rounded
+                "
+              >
+                <p>Select Option Type</p>
+                <div class="d-flex flex-column justify-content-center">
+                  <button data-btn="text" class="btn">
+                    <img
+                      style="height: 2em"
+                      src="./image/Frame.png"
+                      class="img-fluid"
+                      alt=""
+                    />
+                  </button>
+                  <p class="text-center">Text Option</p>
+                </div>
+                <div class="d-flex flex-column p-0">
+                  <button data-btn="image" class="btn">
+                    <img
+                      style="height: 2em"
+                      src="./image/insert_photo_24px.png"
+                      alt=""
+                    />
+                  </button>
+                  <p class="text-center">Image Option</p>
+                </div>
+              </div>
+              <!-- poll answer box -->
+              <div id="answer-box" class="poll-bg mt-2 modal-display rounded">
+                <button data-btn="revert" class="float-end btn">
+                  &#129188;
+                </button>
+                <p>Type in Poll Options Here</p>
+                <div class="col-10 offset-1">
+                  <input
+                    class="rounded-pill poll-bg p-1 mb-1 w-100"
+                    placeholder="Type in Poll Answer"
+                    type="text"
+                  />
+                  <input
+                    class="rounded-pill poll-bg p-1 mb-1 w-100"
+                    placeholder="Type in Poll Answer"
+                    type="text"
+                  />
+                  <input
+                    class="rounded-pill poll-bg p-1 mb-1 w-100"
+                    placeholder="Type in Poll Answer"
+                    type="text"
+                  />
+                  <input
+                    class="rounded-pill poll-bg p-1 mb-1 w-100"
+                    placeholder="Type in Poll Answer"
+                    type="text"
+                  />
+                </div>
+              </div>
+              <!-- upload poll answer box  -->
+              <div
+                id="upload-box"
+                class="mt-2 modal-display rounded bg-light poll-bg"
+              >
+                <button data-btn="revert" class="float-end btn">
+                  &#129188;
+                </button>
+                <p>Upload Poll Options Here</p>
+                <div class="col-10 offset-1">
+                  <div
+                    class="
+                      bg-white
+                      d-flex
+                      justify-content-between
+                      align-items-center
+                      poll-bg
+                      rounded-pill
+                      py-1
+                      px-3
+                      mb-2
+                    "
+                  >
+                    <p class="m-0">Upload in poll Answer</p>
+                    <button class="btn rounded-pill p-0 px-3 poll-bg">
+                      Select Image
+                    </button>
+                  </div>
+                  <div
+                    class="
+                      bg-white
+                      d-flex
+                      justify-content-between
+                      align-items-center
+                      poll-bg
+                      rounded-pill
+                      py-1
+                      px-3
+                      mb-2
+                    "
+                  >
+                    <p class="m-0">Upload in poll Answer</p>
+                    <button class="btn rounded-pill p-0 px-3 poll-bg">
+                      Select Image
+                    </button>
+                  </div>
+                  <div
+                    class="
+                      bg-white
+                      d-flex
+                      justify-content-between
+                      align-items-center
+                      poll-bg
+                      rounded-pill
+                      py-1
+                      px-3
+                      mb-2
+                    "
+                  >
+                    <p class="m-0">Upload in poll Answer</p>
+                    <button class="btn rounded-pill p-0 px-3 poll-bg">
+                      Select Image
+                    </button>
+                  </div>
+                  <div
+                    class="
+                      bg-white
+                      d-flex
+                      justify-content-between
+                      align-items-center
+                      poll-bg
+                      rounded-pill
+                      py-1
+                      px-3
+                      mb-2
+                    "
+                  >
+                    <p class="m-0">Upload in poll Answer</p>
+                    <button class="btn rounded-pill p-0 px-3 poll-bg">
+                      Select Image
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- button -->
+            <div class="row mt-2">
+              <button style="background-color: #0e0e53" class="btn text-white">
+                post
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script/bootstrap.min.js"></script>
     <script src="script/script.js"></script>
     <script src="script/app.js"></script>  
