--- a/verification.html
+++ b/verification.html
@@ -36,7 +36,7 @@
                                 style="border-radius:10px;">     
                     </div>
                     <div class="gap-2 col-lg-6 mt-3">
-                        <a class="btn btn-primary form-control" href="./allticket.html" role="button" type="submit"
+                        <a class="btn btn-primary form-control" href="./feeds.html" role="button" type="submit"
                             style="background-color: #09174B; border-radius:10px;">Proceed</a>
                     </div>
                    
