--- a/allticket.html
+++ b/allticket.html
@@ -169,11 +169,11 @@
                             <img src="./images/Vector1.png" alt="">
                         </div>
                     </div>
-                    <div class="my-5 py-1 text-center w-50 mx-auto rounded" style="background: #09174B;">   
-                        <a href="./category-sorting-page.html" class="text-decoration-none text-light feeds-btn-bg">
-                          <button type="button" class=" btn form-control text-white fs-5 py-1 rounded" >Proceed</button>
+                    <div class="my-5 py-1 text-center w-50 mx-auto" >   
+                        <a href="./category-sorting-page.html" class=" btn form-control text-white fs-5 py-1 text-decoration-none text-light" style="background: #09174B;  border-radius: 10px;">
+                          Proceed
                         </a>  
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
