--- a/category-page.html
+++ b/category-page.html
@@ -20,7 +20,7 @@
         </div>
         <!-- second column -->
         <div class="col-md-6 col-11 pt-2 px-0 ">
-          <div class="pt-5  pt-lg-0 pt-xl-5 " >
+          <div class="pt-5  pt-lg-3 pt-xl-5 " >
             <a href="./index.html"><img src="./image/Logo.png" class="ps-lg-5  ms-lg-3" alt="logo" /></a>
             <div class="w-100 py-1 mt-3" style="background: #1E79A1;"></div>
             <div class="">
@@ -60,9 +60,12 @@
                 </div>
               </div>
           </div>
-          <div class="mt-4 py-1 text-center w-50 mx-auto rounded" style="background: #09174B;">   
-            <a href="./allticket.html" class="text-decoration-none text-light feeds-btn-bg">
-              <button type="button" class=" btn form-control text-white py-1 rounded" >Continue with email</button>
+          <div class="mt-4 py-1 mb-5 mb-lg-0 text-center d-none d-md-block w-50 mx-auto">   
+            <a href="./allticket.html" class="text-decoration-none btn form-control text-white py-2 text-light" style="background: #09174B;  border-radius: 10px;">Continue with email</button>
+            </a>  
+          </div>
+          <div class="mt-4 py-1 mb-5 mb-lg-0 text-center d-md-none w-75 mx-auto">   
+            <a href="./allticket.html" class="text-decoration-none btn form-control text-white py-2 text-light" style="background: #09174B;  border-radius: 10px;">Continue with email</button>
             </a>  
           </div>
         </div>
