--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -20,16 +20,16 @@
 <body>
     <section class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-6 col-lg-6 side-one px-0 d-lg-block">
+            <div class="col-sm-12 col-md-6 d-none side-one px-0 d-lg-block">
                 <img src="./images/Mask Group.png" width="100%" alt="">
             </div>
             <div class="col-md-6 side-two">
                 <div class="logo-image ps-3 ps-lg-5 pt-5 ms-xl-3 mt-3">
-                    <a href="./index.html"><img src="./image/Logo.png" class="ps-lg-5  ms-lg-3" alt="logo" /></a>
+                    <a href="./index.html"><img src="./image/Logo.png" class="" alt="logo" /></a>
                 </div>
                 <h5 class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3">Forgot Password</h5>
-                <small class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3" style="text-decoration:underline" ;>Enter Your Email
-                    Address to reset your password</small>
+                <p class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3 text-decoration-underline">Enter Your Email
+                    Address to reset your password</p>
                 <form class="g-1 ps-3 ps-lg-5 ms-xl-3">
                     <div class="gap-2 col-lg-6 pt-5 mt-5">
                         <label for="inputEmail4" class="form-label text-secondary pb-3">Email</label>
@@ -37,11 +37,11 @@
                                 style="border-radius:10px;">     
                     </div>
                     <div class="gap-2 col-lg-6 mt-3">
-                        <a class="btn btn-primary form-control" href="./newpassword.html" role="button" type="submit"
+                        <a class="btn btn-primary form-control" href="./verification.html" role="button" type="submit"
                             style="background-color: #09174B; border-radius:10px;">Continue with email</a>
                     </div>
                     <div class="gap-2 col-lg-6 mt-3 text-end">
-                        <small class="" > <a class="text-muted foot-text" href="#" role="button" type="submit" style="text-decoration: none;">Back to Log in Page</a></small>
+                        <small class="" > <a class="text-muted foot-text" href="./login.html" role="button" type="submit" style="text-decoration: none;">Back to Log in Page</a></small>
                     </div>
                 </form>
             </div>
