--- a/verification.html
+++ b/verification.html
@@ -20,24 +20,23 @@
 <body>
     <section class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-6 col-lg-6 px-0 d-lg-block">
+            <div class="col-sm-12 col-md-6 d-none px-0 d-lg-block">
                 <img src="./images/Mask Group.png" width="100%" alt="">
             </div>
             <div class="col-md-6 side-two">
                 <div class="logo-image ps-3 ps-lg-5 pt-5 ms-xl-3 mt-3">
-                    <a href="./index.html"><img src="./image/Logo.png" class="ps-lg-5  ms-lg-3" alt="logo" /></a>
+                    <a href="./index.html"><img src="./image/Logo.png" class="" alt="logo" /></a>
                 </div>
                 <h5 class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3">Verification Page</h5>
-              <small> <small class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3" style="text-decoration:underline";>Enter the Verification code from your email you received</small></small>
+                <p class="text-secondary text-decoration-underline ps-3 ps-lg-5 ms-xl-3 pt-3">Enter the Verification code from your email you received</p>
                 <form class="g-1 ps-3 ps-lg-5 ms-xl-3">
                     <div class="gap-2 col-lg-6 pt-5 mt-5">
                         
                             <input type="email" class="form-control" placeholder="Enter the code here" id="inputEmail4"
                                 style="border-radius:10px;">     
                     </div>
-                    <div class="gap-2 col-lg-6 mt-3">
-                        <a class="btn btn-primary form-control" href="./feeds.html" role="button" type="submit"
-                            style="background-color: #09174B; border-radius:10px;">Proceed</a>
+                    <div class="mt-4 mb-5 mb-lg-0 py-1 col-lg-6 text-center">   
+                        <a href="./newpassword.html" class="text-decoration-none text-light feeds-btn-bg  btn form-control text-white py-2"  style="background: #09174B;  border-radius: 10px;">Proceed</a>  
                     </div>
                    
                 </form>
