--- a/dashboard.html
+++ b/dashboard.html
@@ -166,7 +166,56 @@
         </div>
     </section>
 
-    <section class="container my-3 p-3">
+<!-- LARGE SCREEN CHARTS -->
+    <section class="container my-3 p-3 large-chart">
+        <div class="d-flex justify-content-between mx-1 my-1">
+            <div class="my-1 w-50">
+                <div class="row dashboard-borders mx-2">
+                    <div class="col">
+                        <img src="./dash-poll-images/Frame1.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
+            <div class="my-1 w-50">
+                <div class="row dashboard-borders justify-content-end mx-2">
+                    <div class="col">
+                    </div>
+                    <div class="col text-end">
+                        <img src="./dash-poll-images/Frame2.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- <section class="container my-3 p-3">
+        <div class="d-flex justify-content-between mx-1 my-1">
+            <div class="my-1 w-50">
+                <div class="row dashboard-borders mx-2">
+                    <div class="col">
+                        <img src="./dash-poll-images/Frame1.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="col">
+                    </div>
+                </div>
+            </div>
+            <div class="my-1 w-50">
+                <div class="row dashboard-borders justify-content-end mx-2">
+                    <div class="col">
+                    </div>
+                    <div class="col text-end">
+                        <img src="./dash-poll-images/Frame2.png" alt="" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- SMALL SCREEN CHARTS -->
+    <section class="container my-3 p-3 small-chart">
         <div class="row justify-content-between mx-1 my-1">
             <div class="col-sm-12 col-md-12 col-lg-5 dashboard-borders my-1">
                 <div class="row">
@@ -190,34 +239,34 @@
     </section>
 
    <section class="container my-3 user-info">
-        <div class="row justify-content-between mx-1 my-1">
+        <div class="row justify-content-between my-1">
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="m-2 dashboard-borders my-1 m-2">
-                    <div class="p-3">
+                    <div class="p-2">
                         <h4 class="text-center">New Users</h4>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-lg-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 my-2 shadow align-items-center mb-lg-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <p class="px-2">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
+                            <p class="ps-2 text-break">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
                             <img src="./dash-poll-images/more-vertical.svg" alt="" class="align-items-start">
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 my-2 shadow align-items-center mb-lg-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <p class="px-2">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
+                            <p class="ps-2 text-break">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
                             <img src="./dash-poll-images/more-vertical.svg" alt="" class="align-items-start">
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 my-2 shadow align-items-center mb-lg-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <p class="px-2">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
+                            <p class="ps-2 text-break">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
                             <img src="./dash-poll-images/more-vertical.svg" alt="" class="align-items-start">
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 my-2 shadow align-items-center mb-lg-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <p class="px-2">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
+                            <p class="ps-2 text-break">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
                             <img src="./dash-poll-images/more-vertical.svg" alt="" class="align-items-start">
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 my-2 shadow align-items-center mb-lg-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <p class="px-2">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
+                            <p class="ps-2 text-break">Anthony Hopkins Jude <br>anthonyhopkins@gmail.com</p>
                             <img src="./dash-poll-images/more-vertical.svg" alt="" class="align-items-start">
                         </div>
                     </div>
@@ -225,81 +274,81 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="m-2 dashboard-borders my-1 m-2">
-                    <div class="p-3">
+                    <div class="p-2">
                         <h4 class="text-center">Messages</h4>
-                    <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
-                        <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                        <div class="">
-                            <p class="pf-2">Who will win the ballondor of 2020?</p>
-                            <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                        <div class="d-flex flex-wrap dashboard-borders py-2 ps-2 shadow align-items-center mb-2">
+                            <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
+                            <div class="pe-2">
+                                <p class="">Who will win the ballondor of 2020?</p>
+                                <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
-                        <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                        <div class="">
-                            <p class="pf-2">Who will win the ballondor of 2020?</p>
-                            <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                        <div class="d-flex flex-wrap dashboard-borders py-2 ps-2 shadow align-items-center mb-2">
+                            <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
+                            <div class="pe-2">
+                                <p class="">Who will win the ballondor of 2020?</p>
+                                <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
-                        <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                        <div class="">
-                            <p class="pf-2">Who will win the ballondor of 2020?</p>
-                            <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                        <div class="d-flex flex-wrap dashboard-borders py-2 ps-2 shadow align-items-center mb-2">
+                            <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
+                            <div class="pe-2">
+                                <p class="">Who will win the ballondor of 2020?</p>
+                                <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
-                        <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                        <div class="">
-                            <p class="pf-2">Who will win the ballondor of 2020?</p>
-                            <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                        <div class="d-flex flex-wrap dashboard-borders py-2 ps-2 shadow align-items-center mb-2">
+                            <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
+                            <div class="pe-2">
+                                <p class="">Who will win the ballondor of 2020?</p>
+                                <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
-                        <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                        <div class="">
-                            <p class="pf-2">Who will win the ballondor of 2020?</p>
-                            <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                        <div class="d-flex flex-wrap dashboard-borders py-2 ps-2 shadow align-items-center mb-2">
+                            <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
+                            <div class="pe-2">
+                                <p class="">Who will win the ballondor of 2020?</p>
+                                <a href="#" class="text-decoration-none"><h6 class="fw-bold fst-italic text-end">Reply</h6></a>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="m-2 dashboard-borders my-1 m-2">
-                    <div class="p-3">
+                    <div class="p-2">
                         <h4 class="text-center">Trending Polls</h4>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 shadow align-items-center mb-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <div class="pf-2">
+                            <div class="">
                                 <p class="">Who will win the ballondor of 2020?</p>
                                 <h6 class="fw-bold fst-italic text-black">#Sports</h6>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 shadow align-items-center mb-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <div class="pf-2">
+                            <div class="">
                                 <p class="">Who will win the ballondor of 2020?</p>
                                 <h6 class="fw-bold fst-italic text-black">#Sports</h6>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 shadow align-items-center mb-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <div class="pf-2">
+                            <div class="">
                                 <p class="">Who will win the ballondor of 2020?</p>
                                 <h6 class="fw-bold fst-italic text-black">#Sports</h6>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 shadow align-items-center mb-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <div class="pf-2">
+                            <div class="">
                                 <p class="">Who will win the ballondor of 2020?</p>
                                 <h6 class="fw-bold fst-italic text-black">#Sports</h6>
                             </div>
                         </div>
-                        <div class="d-flex flex-wrap dashboard-borders p-3 shadow align-items-center mb-2">
+                        <div class="d-flex flex-wrap dashboard-borders p-2 shadow align-items-center mb-2">
                             <img src="./dash-poll-images/mask-group.png" alt="" class="img-fluid" height="60px" width="60px">
-                            <div class="pf-2">
+                            <div class="">
                                 <p class="">Who will win the ballondor of 2020?</p>
                                 <h6 class="fw-bold fst-italic text-black">#Sports</h6>
                             </div>
