--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </section>
     <section class="text-center">
       <h2 class="pb-4 mt-3 fs-1 fw-bold nav-txt-color">
-        Chartpool Get you Covered
+        Chartpool Got you Covered
       </h2>
       <div class="row mx-md-5 mx-3 text-start">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 mb-2">
