--- a/newpassword.html
+++ b/newpassword.html
@@ -19,14 +19,14 @@
 <body>
     <section class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-sm-12 col-md-6 col-lg-6 px-0 d-lg-block">
+            <div class="col-sm-12 col-md-6 d-none px-0 d-lg-block">
                 <img src="./images/Mask Group.png" width="100%" alt="">
             </div>
             <div class="col-md-6 side-two">
                 <div class="logo-image ps-3 ps-lg-5 pt-5 ms-xl-3 mt-3">
-                    <a href="./index.html"><img src="./image/Logo.png" class="ps-lg-5  ms-lg-3" alt="logo" /></a>
+                    <a href="./index.html"><img src="./image/Logo.png" class="" alt="logo" /></a>
                 </div>
-                <h6 class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3">Please your new password below</h6>
+                <h6 class="text-secondary ps-3 ps-lg-5 ms-xl-3 pt-3">Please enter your new password below</h6>
                 <form class="g-1 ps-3 ps-lg-5 ms-xl-3">
                     <div class="gap-2 col-lg-6 pt-5 mt-5">
                         <label for="inputEmail4" class="form-label text-secondary pb-3">Enter  your new password</label>
@@ -39,10 +39,10 @@
                                 style="border-radius:10px;">     
                     </div>
                     <div class="gap-2 col-lg-6 mt-3">
-                        <a class="btn btn-primary form-control" href="./verification.html" role="button" type="submit"
+                        <a class="btn btn-primary form-control" href="./feeds.html" role="button" type="submit"
                             style="background-color: #09174B; border-radius:10px;">Proceed</a>
                     </div>
-                    <div class="gap-2 col-lg-6 mt-3 text-end">
+                    <div class="gap-2 mb-5 mb-lg-0 col-lg-6 mt-3 text-end">
                         <small class="" > <a class="text-muted foot-text" href="./index.html" role="button" type="submit" style="text-decoration: none;">Back Home</a></small>
                     </div>
                 </form>
