--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signup Continue</title>
+    <title>Signup</title>
      <!-- Bootstrap css -->
      <link rel="stylesheet" href="css/bootstrap.min.css" />
      <link rel="stylesheet" href="css/style.css" />
@@ -13,13 +13,12 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
             <!-- first column -->
-          <div class=" col-lg-6 px-0 d-lg-block">
-            <img class="d-lg-none" src="./image/Mask Group.png" width="100%" height="400px"  alt="mask group" />
-            <img class="d-none d-lg-block" src="./image/Mask Group.png" width="100%" height="100%"  alt="mask group" />
+          <div class=" col-md-6 d-none px-0 d-lg-block">
+            <img class="" src="./image/Mask Group.png" width="100%" height="100%"  alt="mask group" />
           </div>
           <!-- second column -->
-          <div class="col-lg-6 col-11 pt-2 px-0 ">
-            <div class="pt-5  pt-lg-0 pt-xl-5 " >
+          <div class="col-md-6 col-11 pt-2 px-0 ">
+            <div class="pt-5  pt-lg-3 pt-xl-5 " >
               <a href="./index.html"><img src="./image/Logo.png" class="ps-lg-5  ms-lg-3" alt="logo" /></a>
               <div class="d-flex mt-3">
                 <div class="w-100 py-1" style="background: #1E79A1;"></div>
@@ -73,11 +72,9 @@
                       </div>
                     </div>
                   </div>
-                  <div class="my-4 py-1 col-lg-6 text-center rounded" style="background: #09174B;">   
-                    <a href="./category-page.html" class="text-decoration-none text-light feeds-btn-bg">
-                      <button type="button" class=" btn form-control text-white py-1 rounded" >Proceed</button>
-                    </a>  
-                  </div>  
+                  <div class="mt-4 mb-5 mb-lg-0 py-1 col-lg-6 text-center">   
+                    <a href="./category-page.html" class="text-decoration-none text-light btn form-control text-white py-2"  style="background: #09174B;  border-radius: 10px;">Proceed</a>  
+                  </div> 
                 </form>
              </div>
             </div>
